   ethernet interface.

2) Support for NFLOG has been added.

3) Enhanced operational logging

Problems corrected in Shorewall 4.1.2.

None.

Other changes in Shorewall 4.1.2.

1)  Shorewall 4.1.2 contains enhanced operational logging capabilities
    through a set of related enhancements to Shorewall-common and
    Shorewall-shell. The enhancements are not supported by
    Shorewall-shell.

    a)  The STARTUP_LOG option in /etc/shorewall/shorewall.conf gives
        the name of the Shorewall operational log. The log will be
        created if it does not exist.

    b)  The LOG_VERBOSITY option in /etc/shorewall/shorewall.conf gives
        the verbosity at which logging will occur. It uses the same
        value range as VERBOSITY:

	-1    Do not log
	0     Almost quiet
	1     Only major steps
	2     Verbose

    c)  An absolute VERBOSITY may be specified on the command line
        using the -v option followed by -1,0,1 or 2.

	Example:

		shorewall -v2 check

    d)  The /etc/init.d/shorewall script supplied with the
        shorewall.net packages sets '-v0' as the default. This may be
        overridden with the OPTIONS setting in /etc/defaults/shorewall or
        /etc/sysconfig/shorewall.

    Logging occurs on both Shorewall-perl and the generated script when
    the following commands are issued:

	start
	restart
	refresh

    Messages in the log are always timestamped.

New Features in Shorewall 4.1.

1) Shorewall 4.1 contains experimental support for multiple Internet
   providers through a single ethernet interface. Configuring two
   providers through a single interface differs from two providers
   through two interfaces in several ways.

   a) Only ethernet (or ethernet-like) interfaces can be used. For
      inbound traffic, the MAC addresses of the gateway routers is used
      to determine which provider a packet was received through. Note
      that only routed traffic can be categorized using this technique.
