@@ -149,7 +149,7 @@ get_config() {
 
     [ -n "${VERBOSITY:=2}" ]
 
-    VERBOSE=$(($VERBOSE_OFFSET + $VERBOSITY))
+    [ -n "$USE_VERBOSITY" ] && VERBOSE=$USE_VERBOSITY || VERBOSE=$(($VERBOSE_OFFSET + $VERBOSITY))
 
     export VERBOSE
 
@@ -398,6 +398,7 @@ fi
 IPT_OPTIONS="-nv"
 FAST=
 VERBOSE_OFFSET=0
+USE_VERBOSITY=
 NOROUTES=
 EXPORT=
 export TIMESTAMP=
@@ -432,8 +433,29 @@ while [ $finished -eq 0 ]; do
 			option=${option#f}
 			;;
 		    v*)
-			VERBOSE_OFFSET=$(($VERBOSE_OFFSET + 1 ))
 			option=${option#v}
+			case $option in 
+			    -1*)
+				USE_VERBOSITY=-1
+				option=${option#-1}
+				;;
+			    0*)
+				USE_VERBOSITY=0
+				option=${option#0}
+				;;
+			    1*)
+				USE_VERBOSITY=1
+				option=${option#1}
+				;;
+			    2*)
+				USE_VERBOSITY=2
+				option=${option#2}
+				;;
+			    *)
+				VERBOSE_OFFSET=$(($VERBOSE_OFFSET + 1 ))
+				USE_VERBOSITY=
+				;;
+			esac
 			;;
 		    n*)
 			NOROUTES=Yes
