@@ -576,6 +576,9 @@
     url="shorewall.conf.html">shorewall.conf</ulink>(5). Each <emphasis
     role="bold">v</emphasis> adds one to the effective verbosity and each
     <emphasis role="bold">q</emphasis> subtracts one from the effective
+    VERBOSITY. Anternately, <emphasis role="bold">v</emphasis> may be followed
+    immediately with one of -1,0,1,2 to specify a specify VERBOSITY. There may
+    be no white space between <emphasis role="bold">v</emphasis> and the
     VERBOSITY.</para>
 
     <para>The <emphasis>options</emphasis> may also include the letter
