@@ -19,7 +19,8 @@ Other changes in Shorewall 4.1.2.
 1)  Shorewall 4.1.2 contains enhanced operational logging capabilities
     through a set of related enhancements to Shorewall-common and
     Shorewall-shell. The enhancements are not supported by
-    Shorewall-shell.
+    Shorewall-shell nor are they supported by Shorewall-lite except
+    when the script is compiled using Shorewall-perl.
 
     a)  The STARTUP_LOG option in /etc/shorewall/shorewall.conf gives
         the name of the Shorewall operational log. The log will be
